// lib/models/crust.dart

class Crust {
  int id;
  String name;
  double diameter;
  bool isThick;

  Crust({required this.id, required this.name, required this.diameter, required this.isThick});
}
