// lib/models/sauce.dart

class Sauce {
  int id;
  String name;
  String type;

  Sauce({required this.id, required this.name, required this.type});
}
