// lib/models/topping.dart

class Topping {
  int id;
  String name;
  bool isVegetarian;

  Topping({required this.id, required this.name, required this.isVegetarian});
}
